Fixed visibility of elements before fade in

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,6 @@
 body {
   font-family: 'Montserrat', sans-serif;
 }
-.btn, .btn:hover {
-  border-color: #152C52;
-  border-width: 4px;
-  border-style: solid;
-  background-color: transparent;
-  margin-top: 25px;
-}
-.btn:hover {
-  background-color: rgba(255, 255, 255, 0.5);
-}
 .centered {
   position: fixed;
   top: 50%;
@@ -22,7 +12,18 @@ body {
 }
 .fade-in {
   opacity: 0;
+  visibility: hidden;
 }
 .uppercase {
   text-transform: uppercase;
+}
+#enter-site, #enter-site:hover, #enter-site:focus {
+  border-color: #152C52;
+  border-width: 4px;
+  border-style: solid;
+  background-color: transparent;
+  margin-top: 25px;
+}
+#enter-site:hover, #enter-site:focus {
+  background-color: rgba(255, 255, 255, 0.5);
 }
